# PaperPilot

./: .editorconfig  .flake8  .pre-commit-config.yaml  CHANGELOG.md  README.md  bump_version.py  config.toml.example  main.py  manage.py  package.json  paperpilot_common-0.0.11-py3-none-any.whl  pnpm-lock.yaml  pyproject.toml  run.py  runtests.py  update.ps1
.github/workflows/: check.yml  cicd.yml  publish.yml  update.yml
PaperPilotApp/PaperPilot/: PaperPilot.entitlements
config/: .env.example
docker/: Dockerfile  Dockerfile-CN  docker-compose.yml
docs/: PaperPilot第一轮迭代报告.docx
paperpilot-backend/: README.md
paperpilot-backend-ai/: README.md  pyproject.toml
paperpilot-backend-ai/docker/: docker-compose.yml
paperpilot-backend-ai/server/: config.py
paperpilot-backend-coordinator/: pnpm-lock.yaml
paperpilot-backend-coordinator/docker/: Dockerfile
paperpilot-backend-file/: pyproject.toml
paperpilot-backend-file/docker/: Dockerfile
paperpilot-backend-file/server/: urls.py
paperpilot-backend-im/: .gitignore  pyproject.toml
paperpilot-backend-im/server/: config.py
paperpilot-backend-im/tests/: test_config.py
paperpilot-backend-monitor/: pyproject.toml
paperpilot-backend-monitor-client/: pyproject.toml
paperpilot-backend-monitor/.github/workflows/: cicd.yml
paperpilot-backend-monitor/server/apps/monitor/: urls.py  views.py
paperpilot-backend-monitor/server/utils/: trace.py
paperpilot-backend-paper/: pyproject.toml
paperpilot-backend-project/: README.md  main.py
paperpilot-backend-project/docker/: Dockerfile  docker-compose.yml
paperpilot-backend-reflection/: README.md  pyproject.toml  run.py
paperpilot-backend-test/: README.md  pyproject.toml
paperpilot-backend-test/config/: .env.example
paperpilot-backend-test/server/: urls.py  wsgi.py
paperpilot-backend-test/tests/: .coveragerc
paperpilot-backend-translation/: README.md  manage.py  pyproject.toml
paperpilot-backend-translation/.github/workflows/: cicd.yml
paperpilot-backend-translation/docker/: docker-compose.yml
paperpilot-backend-translation/server/apps/translation/: __init__.py  services.py
paperpilot-backend-translation/server/business/baidu/: config.py
paperpilot-backend-translation/server/settings/components/: __init__.py  apps.py
paperpilot-backend-translation/tests/: conftest.py
paperpilot-backend-user/: manage.py  pyproject.toml
paperpilot-backend-user/docker/: Dockerfile
paperpilot-common/: .conventional-changelog  .gitignore  CHANGELOG.md  bump_version.py
paperpilot-common-python/: compile_grpc.py  pyproject.toml
paperpilot-common-python/paperpilot_common/auth/: authentications.py  backends.py
paperpilot-common-python/paperpilot_common/exceptions/: __init__.py  configs.py  handler.py
paperpilot-common-python/paperpilot_common/grpc/: apps.py  client.py  config.py  context.py  utils.py
paperpilot-common-python/paperpilot_common/grpc/client/: client.py  wrapper.py
paperpilot-common-python/paperpilot_common/grpc/management/commands/: grpcserver.py
paperpilot-common-python/paperpilot_common/grpc/signals/: wrapper.py
paperpilot-common-python/paperpilot_common/grpc/test/: context.py  executor.py
paperpilot-common-python/paperpilot_common/helper/: field.py
paperpilot-common-python/paperpilot_common/logs/: admin.py  middleware.py  models.py  threads.py  utils.py
paperpilot-common-python/paperpilot_common/logs/migrations/: 0002_alter_requestlog_content_type_and_more.py
paperpilot-common-python/paperpilot_common/meili/: exceptions.py
paperpilot-common-python/paperpilot_common/middleware/client/: base.py
paperpilot-common-python/paperpilot_common/middleware/server/: auth.py  base.py  db.py  exception.py  trace.py
paperpilot-common-python/paperpilot_common/oss/: callback.py  direct.py  utils.py
paperpilot-common-python/paperpilot_common/protobuf/ai/: ai_pb2.py  ai_pb2.pyi  ai_pb2_grpc.py  ai_pb2_grpc.pyi
paperpilot-common-python/paperpilot_common/protobuf/common/: exce_pb2.py  exce_pb2.pyi  util_pb2.py  util_pb2.pyi
paperpilot-common-python/paperpilot_common/protobuf/im/: im_pb2.py  im_pb2_grpc.py  im_pb2_grpc.pyi
paperpilot-common-python/paperpilot_common/protobuf/monitor/: client_pb2.py  client_pb2.pyi  client_pb2_grpc.py  client_pb2_grpc.pyi  server_pb2.py  server_pb2.pyi  server_pb2_grpc.py  server_pb2_grpc.pyi
paperpilot-common-python/paperpilot_common/protobuf/paper/: paper_pb2.py  paper_pb2.pyi  paper_pb2_grpc.py  paper_pb2_grpc.pyi
paperpilot-common-python/paperpilot_common/protobuf/project/: project_pb2.py  project_pb2.pyi  project_pb2_grpc.py  project_pb2_grpc.pyi
paperpilot-common-python/paperpilot_common/protobuf/test/: test_pb2.py  test_pb2.pyi  test_pb2_grpc.py  test_pb2_grpc.pyi
paperpilot-common-python/paperpilot_common/protobuf/translation/: translation_pb2.py  translation_pb2_grpc.py
paperpilot-common-python/paperpilot_common/protobuf/user/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  auth_pb2_grpc.pyi  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py  user_pb2_grpc.pyi
paperpilot-common-python/paperpilot_common/response/: __init__.py  renderers.py  types.py  utils.py
paperpilot-common-python/paperpilot_common/trace/: jaeger.py
paperpilot-common-python/paperpilot_common/utils/: cache.py  health.py  log.py  mixins.py  package_settings.py  types.py
paperpilot-common-python/paperpilot_common/utils/admin_logs/: apps.py  render.py
paperpilot-common-python/paperpilot_common/utils/admin_logs/migrations/: 0004_remove_logentry_user_logentry_user_id.py  0004_remove_logentry_user_logentry_user_id.py.bak
paperpilot-common-python/paperpilot_common/utils/auth/: views.py
paperpilot-common-python/paperpilot_common/utils/db/: transaction.py
paperpilot-common-python/paperpilot_common/utils/meili/: index.py  task.py
paperpilot-common-python/paperpilot_common/utils/oss/: configs.py  direct.py  utils.py
paperpilot-common-python/paperpilot_common/utils/user/: models.py
paperpilot-common-python/paperpilot_common/utils/watcher/: __init__.py
server/: urls.py
tests/: .coveragerc  conftest.py
(+303 files in other folders)
